--- a/go/gravity-soccer.html
+++ b/go/gravity-soccer.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/football-masters.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/football-masters.png">
+                            <img src="https://sudoku-online.github.io/img/football-masters.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/riddle-school.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/riddle-school.png">
+                            <img src="https://sudoku-online.github.io/img/riddle-school.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/merge-cyber-racers.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/merge-cyber-racers.png">
+                            <img src="https://sudoku-online.github.io/img/merge-cyber-racers.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/flash-tetris.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/flash-tetris.png">
+                            <img src="https://sudoku-online.github.io/img/flash-tetris.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/happy-room.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/happy-room.png">
+                            <img src="https://sudoku-online.github.io/img/happy-room.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/jumping-shell.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/jumping-shell.png">
+                            <img src="https://sudoku-online.github.io/img/jumping-shell.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/thumb-fighter.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/thumb-fighter.png">
+                            <img src="https://sudoku-online.github.io/img/thumb-fighter.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/kart-race-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/kart-race-3d.png">
+                            <img src="https://sudoku-online.github.io/img/kart-race-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tictactoe.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tictactoe.png">
+                            <img src="https://sudoku-online.github.io/img/tictactoe.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/retro-bowl.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/retro-bowl.png">
+                            <img src="https://sudoku-online.github.io/img/retro-bowl.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/big-shot-boxing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/big-shot-boxing.png">
+                            <img src="https://sudoku-online.github.io/img/big-shot-boxing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/short-ride.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/short-ride.png">
+                            <img src="https://sudoku-online.github.io/img/short-ride.png">
                             <div class="product-badge">       
                             </div>
                         </div>
